--- a/views/views.xml
+++ b/views/views.xml
@@ -147,7 +147,7 @@
     <record model="ir.actions.act_window" id="obrador.action_window_remanentes">
       <field name="name">Remanentes</field>
       <field name="res_model">obrador.remanentes</field>
-      <field name="view_mode">tree</field>
+      <field name="view_mode">tree,form</field>
       <field name = "context">{'group_by': 'fecha', 'order': 'fecha desc'}</field>
     </record>
 
@@ -178,7 +178,7 @@
             </sheet>
           </form>
         </field>
-    </record>-->
+    </record> -->
 
 
     
